staticRaw/assets/css/business.scss
---
---

$primary: #3a8100;
$primary_light: #54ab0c;
$primary_lighter: #76a424;
$primary_dark: #3b7b06;

$accent: #ffeda5;

$complementary: #788286;
$complementary_blue: #013c4c;
$complementary_accent: #1b676b;

$light_grey: #f9f9f9;
$blue_grey: #d8dfe2;

$polygon_width: 76px;
$polygon_height: 88px;

$polygon_small_width: 35px;
$polygon_small_height: 40px;
$polygon_small_font_size: 0.8em;

$link_color: #1b676b;

$large_heading_font: 48px;
$large_heading_font_height: 48px;

@import "mixins";
@import "normalize";
@import "caret-elements";
@import "polygon";

@font-face {
  font-family: 'Roboto Condensed';
  font-style: normal;
  font-weight: 100;
  src: local('Roboto Condensed'), local('RobotoCondensed-Regular'), url("../fonts/roboto-condensed-light.woff") format('woff');
}
@font-face {
  font-family: 'Roboto Condensed';
  font-style: normal;
  font-weight: 300;
  src: local('Roboto Condensed'), local('RobotoCondensed-Regular'), url("../fonts/roboto-condensed-regular.woff") format('woff');
}

main {
	display: flex;
	flex-direction: column;

	font-family: 'Roboto Condensed', sans-serif !important;
	font-weight: 100;

	color: $complementary;
}

h1, h2, h3, h4, h5, h6 {
	font-weight: 300;
	font-family: 'Roboto Condensed', sans-serif;
}

#landing-section__logo {
	width: 350px;
}

.landing-section {
	display: flex;

	align-items: center;

	min-height: 100vh;

	padding: 74px 1em;
	box-sizing: border-box;

	font-size: 24px;
	line-height: 30px;
	font-weight: 100;
}

.landing-section--full {
	padding: 0;
}

.landing-section--background-image {
	background-image: url("/assets/images/business_landing_background.jpg");
	background-repeat: no-repeat;
	background-size: cover;
	background-position: top right;

	color: #fff;
}

.landing-section--background-primary {
	background-color: $primary_light;

	color: #fff;
}

.landing-section__inner--centered {
	display: flex;

	flex-direction: column;
	align-items: center;
	justify-content: center;

	width: 100%;
	max-width: 1080px;

	margin: auto;
}

.landing-section__inner--full {
	max-width: none;
	margin: 0;
}

.landing-section--small {
	min-height: 0;
	padding: 0;
}

.landing-section--wrap {
	flex-wrap: wrap;
}

.landing-section--first {
	font-weight: 300;
}

.landing-section__heading {
	margin: 24px 0;

	font-size: $large_heading_font;
	font-weight: 100;

	line-height: $large_heading_font_height;

	font-family: 'Roboto Condensed', sans-serif;

	//text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
}

.landing-section__heading--low-profile {
	line-height: 24px;
}

.landing-section__heading--primary {
	color: $primary;
	//text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
}

.landing-section__heading--complementary {
	color: $complementary_blue;
}

.landing-section__heading--centered {
	text-align: center;
}

.landing-section__paragraph {
	//text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.95);
	margin: 1em auto;
	letter-spacing: 0.3pt;
}

.landing-section__link {
	color: $link_color;

	&:hover {
		color: $link_color;
		text-decoration: underline;
	}
}

.landing-section__link--accent {
	color: $accent;

	&:hover {
		color: $accent;
	}
}

.landing-secition__link--shadow {
	//text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
}

.landing-section__form {
	font-size: 18px !important;
}

.landing-section__form--multi-input {
	width: 646px;

	& > *:nth-child(2n) {
		margin-left: 270px;
		margin-top: -50px;

		&.caret-wrapped {
			margin-left: 290px;
		}
	}

	@media (max-width: 880px) {
		max-width: 100%;

		& > *:nth-child(2n) {
			margin-left: 0;
			margin-top: 0;
		}
	}
}

.landing-section__input--primary {
	color: $primary_lighter;

	&::-webkit-input-placeholder {
		color: $primary_lighter;
	}
}

.landing-section__input--complementary {
	background-color: $light_grey !important;
	color: $complementary;

	&::-webkit-input-placeholder {
		color: $complementary;
	}
}

.landing-section__upper-quote {
	padding: 83px 0;

	h2 {
		margin-bottom: 42px;
	}
}

.landing-section__lower-quote {
	background: $light_grey;
	width: 100%;

	padding: 42px 0;
}

.landing-section__quote {
	display: flex;
	flex-wrap: wrap;

	max-width: 1000px;
	margin: auto;
}

.landing-section__quote__icon-wrap {
	display: flex;

	justify-content: center;
	align-items: center;

	flex-basis: 15%;
	height: 120px;

	margin-top: 1rem;
}

.landing-section__quote__icon-wrap__icon {
	width: 60px;
}

.landing-section__quote__text {
	flex-basis: 85%;
}

.landing-section__quote__cite {
	width: 100%;
	flex-shrink: 0;

	text-align: right;
}

.features {
	display: flex;

	width: 100%;

	position: relative;

	@media (max-width: 1640px) {
		flex-wrap: wrap;
	}
}

.feature {
	display: flex;

	width: 25%;

	border-bottom: 1px solid rgba(0, 0, 0, 0.035);
	box-sizing: border-box;

	&:not(:last-child) {
		border-right: 1px solid rgba(0, 0, 0, 0.035);
	}

	&:nth-child(-n + 2) {
		.feature__detail {
			@media (min-width: 881px) {
				background-position: -220px calc(100% + 120px);
				padding: 0 2em 0 320px;
			}
			@media (min-width: 1500px) {
				background-position: -120px 120px;
				padding-left: 420px;
			}
		}
	}
}

@media (min-width: 1500px) {
	.feature__detail {
		background-position: calc(100vw - 380px) 120px;
		padding-right: 420px;
	}
}

.feature__short {
	display: flex;
	align-items: center;

	height: 280px;
}

.feature__description {
	padding: 0 1em;
}

.feature__description__headline {
	text-transform: uppercase;
	font-size: 1em;

	margin: 1.5rem 0 0;
}

.feature__description__text {
	margin: 1.5rem 0;
}

.feature__polygon {
	display: flex;
	position: relative;

	width: 160px;
	height: 100%;

	align-items: center;


	flex-shrink: 0;

	background-color: $blue_grey;

	transition: .2s background-color ease-in-out;
}

@media (max-width: 1650px) {
	.feature, .feature__short {
		height: 321px;
	}

	.feature__detail {
		top: 321px;
	}

	.feature__short {
		flex-wrap: wrap;
	}

	.feature__polygon {
		width: 100%;
		height: 128px;

		margin-bottom: 0;
		order: 2;
	}

	.feature__description__text {
		height: 90px;
	}
}

@media (min-width: 1161px) and (max-width: 1270px) {
	.feature, .feature__short {
		height: 351px;
	}

	.feature__detail {
		top: 351px;
	}

	.feature__description__text {
		height: 120px;
	}
}

@media (min-width: 941px) and (max-width: 1160px) {
	.feature, .feature__short {
		height: 381px;
	}

	.feature__detail {
		top: 381px;
	}

	.feature__description__text {
		height: 150px;
	}
}

@media (min-width: 881px) and (max-width: 940px) {
	.feature, .feature__short {
		height: 411px;
	}

	.feature__detail {
		top: 411px;
	}

	.feature__description__text {
		height: 180px;
	}
}

@media (max-width: 880px) {
	.feature {
		height: auto;
		width: 100%;
		flex-wrap: wrap;
	}

	.feature__short {
		width: 100%;
	}

	.feature__description__text {
		height: auto;
	}
}

@media (min-width: 881px) {
	.feature__detail {
		background-position: calc(100vw - 280px) calc(100% + 120px);
		padding: 0 320px 0 2em;
	}
}


.feature__detail {
	display: flex;
	flex-direction: column;

	visibility: hidden;
	box-sizing: border-box;

	width: 100%;

	background-color: $light_grey;

	background-image: url("../images/encrypt_fast.png");
	background-size: auto 572px;
	background-repeat: no-repeat;

	@media (max-width: 880px) {
		position: relative;
		display: none;
		top: 0;

		padding: 0 1em;

		background: none;
	}

	@media (min-width: 881px) {
		position: absolute;
		left: 0;
		min-height: 572px;

		padding-bottom: 1em !important;
	}

	@media (min-width: 1160px) {
		min-height: none;
		height: 572px;
		padding-bottom: 0 !important;
	}

	@media (min-width: 1651px) {
		top: 280px;
	}
}

.detail__content {
	margin: auto 0;

	@media (max-width: 880px) {
		margin-bottom: 34px;
	}
}

.detail__content__headline {
	font-size: $large_heading_font;
	color: $complementary_blue;
}

.detail__content__text {
	max-width: 1080px;
}

.detail__close {
	position: absolute;
	top: 1em;
	right: 1em;

	color: $blue_grey;

	transition: 0.1s color ease-in-out;

	&:hover {
		color: darken($blue_grey, 5%);
	}
}

.feature:focus,
.feature:hover {
	.feature__polygon {
		background-color: $primary_light;
	}
}

.feature:focus {
	outline: none !important;

	@media (min-width: 881px) {
		margin-bottom: 572px;
	}

	.feature__polygon {
		&:after {
			content: " ";

			position: absolute;
			bottom: -8px;
			left: 50%;

			margin: 0 0 0 -16px;

			height: 0;
			width: 0;

			border-style: solid;
			border-width: 8px 16px 0 16px;
			border-color: $primary_light transparent transparent transparent;

			z-index: 4;
		}
	}

	.feature__detail {
		visibility: visible;

		@media (max-width: 880px) {
			display: flex;
		}
	}
}

.landing-footer {
	display: flex;

	width: 100%;
}

.landing-footer__part {
	display: flex;

	height: 72px;
	width: 50%;
	flex-shrink: 0;

	align-items: center;

	padding: 0 24px;
	box-sizing: border-box;
}

.landing-footer__left {
	justify-content: flex-start;
}

.landing-footer__right {
	justify-content: flex-end;
}

.landing-footer__link {
	color: $complementary;
	padding: 0 6px;

	&:hover {
		color: $primary_light;
	}
}

#landing-footer__logo {
	height: 48px;
}

@import "animation";

.animation-box {
	margin-top: 72px;
}

.s1Pc,
.s2Pc {
	margin-top: 10px;
}

.animation-node-description {
	font-size: 18px;
	font-weight: 100;
	line-height: 18px;
}

.message {
	width: 106px;
}

{% assign animationTime = 15 %}

.animation-start {
	.message {
		@include animation(sendMessage {{animationTime}}s);
	}
	.message-s2 {
		@include animation-direction(reverse);
	}
	.message--infinity {
		@include animation-iteration-count(infinite);
	}
	{% for lang in site.data.b2b.animation.langs %}
		{% for message in site.data.b2b.animation[lang].data %}
			{% if forloop.index > 2 %}
				{% capture doLoop %}{% cycle 'true', 'false' %}{% endcapture %}
				{% if doLoop == 'true' %}
					{% capture index %}{{ forloop.index0 | divided_by: 2 }}{% endcapture %}
					.message-{{lang}}--i{{forloop.index}},
					.message-{{lang}}--i{{forloop.index | plus: 1}} {
						@include animation-delay({{ animationTime | times: index }}s);
					}
				{% endif %}
			{% endif %}
		{% endfor %}
	{% endfor %}
}

.fa-l {
	font-size: 3em;
}

.fa-xl {
	font-size: 5em;
}

.text--center {
	text-align: center;
}

.text--primary {
	color: $primary_light;
}

.text--complementary {
	color: $complementary_blue;
}

